--- a/css/main.css
+++ b/css/main.css
@@ -278,8 +278,9 @@ textarea {
     }
 }
 
-/* #FD5626 */
+
 /* CUSTOM STYLES; */
+/*HERO*/
 h1, h2, h3, h4, h5, h6, a, p {
   color: white!important;
 }
@@ -292,8 +293,8 @@ body {
 }
 section.hero {
     color: white;
-    background: url(../img/noise.jpg);
-    min-height: 100vh;
+    background: url(../img/pitbull-hero.png);
+    min-height: 110vh;
     background-size: cover;
     display: flex;
     align-items: center;
@@ -306,14 +307,14 @@ section.hero {
     right: 0;
     left: 0;
     display: block;
-    background: rgba(0, 0, 0, 0.65);
+    background: rgba(0, 0, 0, 0.5);
 }
 .hero-text-box h1 {
-    font-size: 5.5rem;
+    font-size: 3.5rem;
     font-weight: 700;
 }
 .hero-text-box span {
-    color: #0c85ff;
+    color: #cfac67;
 }
 hr.hero-line {
     border: 2px solid white;
@@ -336,23 +337,74 @@ form.hero-form input {
     border-radius: 100px;
     margin: 7.5px 0;
 }
-input.hero-submit {
-    background: #0c85ff;
+input.hero-submit, .cta-btn {
+    background: #cfac67;
     color: white;
     font-weight: 700;
+    cursor: pointer;
+    border: solid 1px #cfac67!important;
+    padding: 15px 25px;
+    border-radius: 100px;
+    margin: 7.5px 0;
+    display: inline-block;
 }
 .hero-text-box p {
     font-size: 1.5rem;
     font-weight: 600;
 }
+p.hero-info {
+    text-transform: uppercase;
+}
+.extra-info {
+    position: relative;
+    top: -100px;
+    font-size: 1.25rem;
+    font-weight: 700;
+    margin-bottom: -75px;
+}
+.gradient {
+    height: 50px;
+    background: linear-gradient(transparent, #000);
+}
+.ungradient {
+    background: #000;
+    padding: 25px 0;
+}
+.bottom-gradient {
+    height: 50px;
+    position: absolute;
+    bottom: -75px;
+    background: linear-gradient(#000, transparent);
+    right: 0;
+    left: 0;
+}
+.extra-info span {
+    color: #cfac67;
+}
+.presented-by {
+    justify-content: center;
+    align-items: center;
+}
+.presented-by img {
+    max-width: 200px;
+    margin: 50px 25px;
+}
+.presented-by h2 {
+    font-weight: 700;
+    font-size: 1.75rem;
+}
+/*HERO CARDS*/
 section.hero-cards {
     background: #222;
     padding: 50px 0;
 }
+
 hr.thicc-line {
     border: 4px solid white;
     width: 75px;
 }
+
+/*Valencia Banner*/
 section.huge-banner {
     background: url(../img/Valencia_Hero.jpg);
     height: 800px;
@@ -364,5 +416,12 @@ section.huge-banner {
   padding: 50px;
 }
 .huge-banner-text-box h1 {
+    font-weight: 700;
     font-size: 3rem;
+    margin-bottom: 25px;
+}
+.huge-banner-text-box h3 {
+    font-weight: 700;
+    margin-bottom: 50px;
+    font-size: 2.25rem;
 }
