--- a/css/main.css
+++ b/css/main.css
@@ -384,10 +384,11 @@ p.hero-info {
 .presented-by {
     justify-content: center;
     align-items: center;
+    margin-top: 75px;
 }
 .presented-by img {
     max-width: 200px;
-    margin: 50px 25px;
+    margin: 0 25px;
 }
 .presented-by h2 {
     font-weight: 700;
@@ -403,25 +404,188 @@ hr.thicc-line {
     border: 4px solid white;
     width: 75px;
 }
+section.attorney-info {
+    background: #181a1d;
+}
 
 /*Valencia Banner*/
 section.huge-banner {
-    background: url(../img/Valencia_Hero.jpg);
-    height: 800px;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-}
-.huge-banner-text-box {
-  padding: 50px;
+    position: relative;
+    z-index: -1;
 }
 .huge-banner-text-box h1 {
     font-weight: 700;
-    font-size: 3rem;
+    font-size: 5.5rem;
     margin-bottom: 25px;
 }
 .huge-banner-text-box h3 {
     font-weight: 700;
     margin-bottom: 50px;
-    font-size: 2.25rem;
+    font-size: 3rem;
+}
+.huge-banner-text-box {
+    position: absolute;
+    top: 350px;
+    width: 55%;
+    left: 100px;
+    padding: 25px;
+}
+
+/* FAQ */
+.card-header {
+    background: #181a1d!important;
+    border: none!important;
+    border-radius: 3px!important;
+}
+.btn-link, .btn-link:focus {
+    color: white!important;
+    text-decoration: none!important;
+}
+.btn-link:hover {
+    color: #cfac67!important;
+    text-decoration: none!important;
+}
+.card {
+    border: none!important;
+    border-radius: 0!important;
+    background: none!important;
+    margin: 7.5px 0;
+}
+.card-body {
+    background: #000!important;
+    color: white!important;
+}
+.section-title {
+    font-weight: 700;
+}
+
+/* FOOTER */
+footer {
+  background: #181a1d!important;
+}
+.logo-footer {
+    max-width: 225px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.call-today {
+    color: #cfac67!important;
+    font-weight: 600;
+}
+.phone-today {
+    font-weight: 700;
+}
+.footer-title {
+    color: #cfac67!important;
+    font-weight: 700;
+}
+
+/* RESPONSIVENESS */
+@media (max-width: 1500px) {
+  .huge-banner-text-box {
+      top: 225px;
+  }
+  .huge-banner-text-box h1 {
+      font-size: 4.25rem;
+  }
+  .huge-banner-text-box h3 {
+      font-size: 2.25rem;
+  }
+}
+@media (max-width: 1200px) {
+  .huge-banner-text-box {
+      top: 150px;
+  }
+  .huge-banner-text-box h1 {
+      font-size: 3.5rem;
+  }
+  .huge-banner-text-box h3 {
+      margin-bottom: 25px;
+      font-size: 1.75rem;
+  }
+}
+@media (max-width: 991px) {
+  .huge-banner-text-box {
+      top: 125px;
+      left: 50px
+  }
+  .huge-banner-text-box h1 {
+      font-size: 2.75rem;
+  }
+  .huge-banner-text-box h3 {
+      font-size: 1.5rem;
+  }
+}
+@media (max-width: 767px) {
+  .presented-by {
+    margin-bottom: 100px;
+  }
+  .huge-banner-text-box {
+      top: 75px;
+      left: 25px
+  }
+  .huge-banner-text-box h1 {
+      font-size: 2rem;
+  }
+  .huge-banner-text-box h3 {
+      font-size: 1.25rem;
+      margin-bottom: 15px;
+  }
+  .huge-banner .cta-btn {
+      font-size: 0.75rem!important;
+      padding: 10px 25px;
+  }
+  section.hero {
+      background-position: -350px;
+  }
+}
+@media (max-width: 550px) {
+  .presented-by {
+    flex-direction: column;
+  }
+  .presented-by h2 {
+    margin-bottom: 25px;
+  }
+  .huge-banner-text-box {
+      top: 50px;
+      left: 0;
+      width: 65%;
+  }
+  .huge-banner-text-box h1 {
+      font-size: 1.5rem;
+  }
+  .huge-banner-text-box h3 {
+      font-size: 1rem;
+      margin-bottom: 15px;
+  }
+  .section-title {
+      font-size: 2rem;
+  }
+  .hero-text-box h1 {
+      font-size: 3rem;
+  }
+  .hero-text-box p {
+      font-size: 1rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .huge-banner-text-box {
+      top: 15px;
+  }
+  .huge-banner-text-box h1 {
+      font-size: 1.25rem;
+  }
+  .huge-banner-text-box h3 {
+      margin-bottom: 5px;
+  }
+}
+@media (max-width: 360px) {
+  .huge-banner-text-box h3 {
+      font-size: 0.75rem;
+  }
+  .faq .btn-link {
+      font-size: 0.75rem;
+      padding: 0;
+  }
 }
