--- a/css/main.css
+++ b/css/main.css
@@ -570,6 +570,9 @@ footer {
   .hero-text-box p {
       font-size: 1rem;
   }
+  form.hero-form {
+      padding: 50px 25px;
+  }
 }
 
 @media (max-width: 450px) {
